# white_bear_green_world

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  GIT_HOOKS.md  LICENSE  README.md
src/: AssetManager.cpp  Config.cpp  Config.h  Cutscene.cpp  Cutscene.h  Explosion.h  Game.cpp  Game.h  GameState.h  TileMap.cpp  TileMap.h  TitleScreen.cpp  TitleScreen.h  WorldMap.cpp  main.cpp
src/actions/: Attack.cpp  Attack.h
src/core/: Camera.h  Collision.cpp  Collision.h  GameConstants.h  Input.cpp  Input.h
src/cutscenes/: Cutscene.h  CutsceneManager.cpp  CutsceneManager.h  RivalBearIntroCutscene.cpp  RivalBearIntroCutscene.cpp.bak  RivalBearIntroCutscene.h
src/effects/: Explosion.h
src/entities/: Arachnoid.cpp  Arachnoid.h  Boss.h  Enemy.h  Fireball.h  FrenzyWolf.cpp  FrenzyWolf.h  IdleEnemy.h  PolarBear.cpp  PolarBear.h  RivalBear.cpp  RivalBear.h  RobotEnemy.cpp  RobotEnemy.h  SnowRobotBoss.cpp  SnowRobotBoss.h
src/entities/components/: BearComponent.h  ClimbingComponent.cpp  ClimbingComponent.h  MovementComponent.cpp  MovementComponent.h  README.md  SwimmingComponent.cpp  SwimmingComponent.h  WindArmorComponent.cpp  WindArmorComponent.h
src/entities/movement/: ClimbingMovementState.cpp  ClimbingMovementState.h  MovementState.h  NormalMovementState.cpp  NormalMovementState.h  SwimmingMovementState.cpp  SwimmingMovementState.h
src/levels/: StageRegistry.cpp  StageRegistry.h
src/screens/: Cutscene.cpp  SaveScreen.cpp  SaveScreen.h  TitleScreen.cpp  WorldMap.cpp  WorldMap.h
src/systems/: AssetManager.h  Config.cpp  Config.h  GameState.cpp  GameState.h  MusicManager.cpp  MusicManager.h  TileMap.cpp  TileMap.h
src/ui/: Menu.cpp  Menu.h
